--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+v1.01 (Jan 04,2011)
+ * Add detached option for those who use a supervising daemon
+ * Build cleanup for non-cpuid environments
+
+v1.0 (Nov 28,2010)
+ * Fix gcc 4.5 optimization of HARDCLOCK
+ * Add contrib section
+
 v0.9 (Sep 01, 2009)
  * Refine collection for gcc 4.4 on Intel  i7 (gentoo)
  * Update auto tune to Intel latest cpuid spec
