--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+haveged (1.1-2~bpo60+1) squeeze-backports; urgency=low
+
+  * Rebuild for squeeze-backports.
+
+ -- Jérémy Bobbio <lunar@debian.org>  Sun, 08 May 2011 11:22:30 +0200
+
 haveged (1.1-2) unstable; urgency=low
 
   * Simplify extended description.
