--- a/man/haveged.8
+++ b/man/haveged.8
@@ -39,6 +39,9 @@ on any installation before the haveged is put into production.
 
 .SH OPTIONS
 .TP
+-b nnn, --buffer=nnn
+Set collection buffer size to nnn KB. Default is 128.
+.TP
 -d nnn, --data=nnn
 Set data cache size to nnn KB. Default is 16 or as determined by cpuid.
 .TP
