--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+haveged (1.4-1) unstable; urgency=low
+
+  * New upstream version. (Closes: #660198)
+  * Drop obsolete Debian patches.
+  * Refresh debian/copyright.
+
+ -- Jérémy Bobbio <lunar@debian.org>  Fri, 17 Feb 2012 13:20:51 +0100
+
 haveged (1.3a-1) unstable; urgency=low
 
   * New upstream version. (Closes: #657683)
