--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+haveged (1.4-4) unstable; urgency=low
+
+  * Disable NIST test suite on mips and mipsel as it takes way
+    too long on these architectures. At least long enough to prevent the
+    package build to complete properly.
+
+ -- Jérémy Bobbio <lunar@debian.org>  Fri, 13 Apr 2012 15:58:39 +0200
+
 haveged (1.4-3) unstable; urgency=low
 
   * Add patch by Sven Hartge to overcome mips build failures:
